--- a/PrsCapstone/PrsCapstone.csproj
+++ b/PrsCapstone/PrsCapstone.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DataAnnotationsExtensions" Version="5.0.1.27" />
     <PackageReference Include="microsoft.entityframeworkcore.proxies" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.1" />
     <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="3.1.2" />
